# Polymarket_Insider

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.cfg
polymarket_insider/: config.py
polymarket_insider/analytics/: __init__.py  consensus.py  flow.py  wallet_metrics.py
polymarket_insider/api/: data_api.py  gamma.py
polymarket_insider/db/: schema.py  store.py
polymarket_insider/pipeline/: collect.py  report.py  run_daily.py  score.py
polymarket_insider/scoring/: features.py  weights.py
polymarket_insider/tools/: __init__.py  consensus_quickview.py  daily_quickview.py  inspect_flow.py  inspect_latest.py
polymarket_insider/utils/: io.py  time.py
tests/: test_consensus.py  test_flow.py  test_scoring.py  test_wallet_metrics.py
